tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_add_duplicate.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
⚠️  Warning: The 'sources' command is deprecated and will be removed in a future version.
   Please use 'fastskill repos' for repository management instead:
   - 'sources list' → 'repos list'
   - 'sources add' → 'repos add'
   - 'sources remove' → 'repos remove'
   - 'sources show' → 'repos info'
   - 'sources update' → 'repos update'
   - 'sources test' → 'repos test'
   - 'sources refresh' → 'repos refresh'
   - 'sources create' → 'marketplace create'

Error: Configuration error: Failed to add repository: Custom error: Repository 'duplicate-repo' already exists
