tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_add_git.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Added repository: git-repo
