tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_add_local.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Added repository: test-repo
