tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_add_with_priority.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Added repository: priority-repo
