tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_list_with_repos.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
Configured Repositories (2):
  • git-repo (type: git-marketplace, priority: 5)
  • local-skills (type: local, priority: 10)
