tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_refresh_single.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Refreshed cache for repository: refreshable-repo
