tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_remove_success.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Removed repository: removable-repo
